[package]
name = "po"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
confique = { version = "0.4.0", features = ["toml"] }
fast-glob = "1.0.0"
hex = "0.4.3"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "time"] }
